syntax = "proto3";

package Watched;

option go_package = "/watched";

service Main {
  rpc IncreaseWatched(stream IncreaseWatchedRequest) returns (stream IncreaseWatchedResult);
}

message IncreaseWatchedRequest {
  repeated string streamsIds = 1;
}

message IncreaseWatchedResult {
  bool success = 1;
}